nai-tokenizers/tests/snapshots/glm45_template_tests__glm45_template_tests__01_basic_with_gen_prompt.snap
---
source: nai-tokenizers/tests/glm45_template_tests.rs
expression: output
---
[gMASK]<sop><|system|>
You are a helpful assistant.<|user|>
Hello, how are you?/nothink<|assistant|>
<think></think>
