nai-tokenizers/tests/snapshots/glm45_template_tests__glm45_template_tests__03_thinking_disabled.snap
---
source: nai-tokenizers/tests/glm45_template_tests.rs
expression: output
---
[gMASK]<sop><|system|>
You are a helpful AI assistant.<|user|>
Solve this: 2 + 2/nothink<|assistant|>
<think></think>
