nai-tokenizers/tests/snapshots/glm45_template_tests__glm45_template_tests__04_multi_turn.snap
---
source: nai-tokenizers/tests/glm45_template_tests.rs
expression: output
---
[gMASK]<sop><|system|>
You are an expert programmer.<|user|>
How do I read a file in Python?/nothink<|assistant|>
<think></think>
Use `open()` with a context manager:
```python
with open('file.txt', 'r') as f:
    content = f.read()
```<|user|>
What about writing?/nothink<|assistant|>
<think></think>
