nai-tokenizers/tests/snapshots/glm45_template_tests__glm45_template_tests__06_reasoning_content_think_disabled.snap
---
source: nai-tokenizers/tests/glm45_template_tests.rs
expression: output
---
[gMASK]<sop><|system|>
You are a helpful math tutor.<|user|>
What is 15 * 24?/nothink<|assistant|>
<think></think>
The answer is 360.
