nai-tokenizers/tests/snapshots/glm45_template_tests__glm45_template_tests__07_reasoning_content_think_enabled.snap
---
source: nai-tokenizers/tests/glm45_template_tests.rs
expression: output
---
[gMASK]<sop><|system|>
You are a helpful math tutor.<|user|>
What is 15 * 24?<|assistant|>
<think>15 * 24 = 15 * (20 + 4) = 300 + 60 = 360</think>
The answer is 360.
