nai-tokenizers/tests/snapshots/glm45_template_tests__glm45_template_tests__09_chat_no_prefill.snap
---
source: nai-tokenizers/tests/glm45_template_tests.rs
expression: output
---
[gMASK]<sop><|system|>
You are a helpful assistant.<|user|>
Hello!/nothink
