nai-tokenizers/tests/snapshots/glm45_template_tests__glm45_template_tests__10_chat_canonical_prefill.snap
---
source: nai-tokenizers/tests/glm45_template_tests.rs
expression: output
---
[gMASK]<sop><|system|>
You are a helpful assistant.<|user|>
What is 2+2?/nothink<|assistant|>
<think></think>
