nai-tokenizers/tests/snapshots/glm45_template_tests__glm45_template_tests__11_chat_canonical_prefill_reasoning_enabled.snap
---
source: nai-tokenizers/tests/glm45_template_tests.rs
expression: output
---
[gMASK]<sop><|system|>
You are a helpful assistant.<|user|>
Solve this problem: 15 * 24<|assistant|>
