nai-tokenizers/tests/snapshots/glm45_template_tests__glm45_template_tests__12_chat_partial_reasoning_prefill.snap
---
source: nai-tokenizers/tests/glm45_template_tests.rs
expression: output
---
[gMASK]<sop><|user|>
Is 97 prime?<|assistant|>
<think>Let me check divisibility...
